# valkyrie

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  COPYING  Dockerfile  Makefile  README.md  SConstruct  test.c  todo.md
.github/_workflows/: scons.yml
.github/workflows/: build.yml  ci.yml  docs.yml  scons.yml
Documentation/: Makefile  building.ad  devel.ad  index.ad  roadmap.ad
Documentation/bootloader/: bios-boot.ad  core-driver-install.ad  efi-boot.ad  index.ad  style.css
Documentation/kernel/: arch.ad  drivers.ad  fs.ad  hal.ad  index.ad  init.ad  mem.ad  std.ad  sys.ad
Documentation/usr/: index.ad  libmath.ad
Documents/: Makefile  building.ad  devel.ad  index.ad  roadmap.ad
Documents/kernel/: cpu.ad  signal.ad  syscall.ad
Documents/tex/: TheValkyrieOperatingSystem.tex
Documents/usr/: selftest.ad  sh.ad
Documents/www/: about.html  docs.html  downloads.html  index.html
Documents/www/js/: searchweb.js
Documents/www/stylesheet/: stylesheet.css
LICENCES/: BSD-3-Clause.txt
boot/: SConscript
boot/bios/: SConscript
boot/bios/i686/: disk.S
boot/bios/video/: SConscript  mkfont.py
boot/common/: SConscript
boot/common/fs/: iso9660.c
bootloader/: SConscript  Sconscript
bootloader/bios/: SConscript  main.c
bootloader/bios/i686/: SConscript  Sconscript  boot.S  core.S  core.ld  detect.S
bootloader/bios/video/: SConscript  font.h  print.c  serial.c  vbe.c  vga.c  vga_text.c  video.h
bootloader/bios/x86_64/: SConscript  boot.ld
bootloader/common/: SConscript
bootloader/common/fs/: SConscript  gpt.c  iso9660.c  mbr.c
bootloader/efi/: SConscript
bootloader/efi/aarch64/: SConscript
bootloader/efi/x86_64/: SConscript
bootloader/i686-bios/: boot.S
image/: CMakeLists.txt  Makefile  SConscript
image/root/boot/grub/: grub.cfg
image/root/test/: test.txt
include/libmath/: math.h
include/valecium/: valecium.h
include/valkyrie/: fs.h  system.h  valkyrie.h
kernel/: CMakeLists.txt  Makefile  SConscript  main.c
kernel/arch/: SConscript
kernel/arch/i686/: SConscript  linker.ld  rust-target.json
kernel/arch/i686/boot/: SConscript  crti.S  crtn.S  detect.S  entry.S  linker.ld  parser.c  parser.h
kernel/arch/i686/cpu/: SConscript  gdt.c  gdt.h  gdt_asm.S  i8253.c  i8253.h  i8259.c  i8259.h  idt.c  idt.h  idt_asm.S  irq.c  irq.h  isr.c  isr.h  isr_asm.S  isrs_gen.c  isrs_gen.inc  mkisrs.py  mkisrs.sh  pic.h  scheduler.c  scheduler.h  scheduler_asm.S  tss.c  tss.h  usrmode.h
kernel/arch/i686/drivers/: SConscript  ps2.c  ps2.h  serial.h  tty.c  tty.h
kernel/arch/i686/io/: SConscript  io.c  io.h  io_asm.S
kernel/arch/i686/mem/: SConscript  memory_asm.S  paging.c  paging.h  stack.c  stack.h  tlb.h  vm_layout.h
kernel/arch/i686/signal/: SConscript  sigframe.h  sigreturn_asm.S
kernel/arch/i686/syscall/: SConscript  syscall.c  syscall.h
kernel/arch/i686/video/: SConscript  vga.c  vga.h
kernel/cpu/: SConscript  core.c  cpu.c  cpu.h  exec.c  fork.c  kernel.c  process.c  process.h  scheduler.c  scheduler.h  user.c
kernel/crypto/: SConscript  crypto.c  crypto.h  md5.c  sha1.c
kernel/display/: buffer_text.c  buffer_text.h  keyboard.c  keyboard.h  startscreen.c  startscreen.h
kernel/drivers/: SConscript
kernel/drivers/ata/: SConscript  ata.c  ata.h
kernel/drivers/fdc/: SConscript  fdc.c  fdc.h
kernel/drivers/keyboard/: SConscript  keyboard.c  keyboard.h
kernel/drivers/tty/: SConscript  tty.c  tty.h  tty_buffer.c  tty_color.c  tty_dev.c  tty_read.c  tty_write.c
kernel/fs/: SConscript  fd.c  fs.c  fs.h
kernel/fs/devfs/: SConscript  devfs.c  devfs.h
kernel/fs/disk/: SConscript  disk.c  disk.h  mbr.c  partition.c  partition.h  vbr.c
kernel/fs/fat/: SConscript  fat.c  fat.h
kernel/fs/fd/: SConscript  fd.c  fd.h
kernel/fs/misc/: SConscript  fs.c  fs_types.h  std_dev.c
kernel/fs/vfs/: SConscript  mnt.c  vfs.c  vfs.h
kernel/hal/: SConscript  hal.c  hal.h  io.h  irq.h  mem.h  paging.h  scheduler.h  stack.h  syscall.h  tss.h  tty.h  video.h
kernel/init/: SConscript  interact.c  main.c  mount.c
kernel/mem/: SConscript  heap.c  memory.c  mm_kernel.h  mm_proc.h  pmm.c  protect.c  stack.c  vmm.c
kernel/signal/: SConscript  signal.h
kernel/std/: SConscript  arrays.h  binary.h  ctype.c  ctype.h  minmax.h  stdio.c  stdio.h  string.c  string.h
kernel/sys/: SConscript  cmdline.c  cmdline.h  dylib.c  dylib.h  elf.c  elf.h  sys.c  sys.h
kernel/sys/kmod/: SConscript  dylib.c  dylib.h  kmod.c  kmod.h
kernel/syscall/: SConscript  syscall.c  syscall.h
scripts/: Dockerfile  Dockerfile.aarch64  Dockerfile.i686  Dockerfile.x86_64  autorun.pl  checkenv.pl
scripts/base/: __init__.py  bochs.py  dependencies.py  dependencies.sh  format.py  gdb.py  gdb.sh  qemu.py  toolchain.py  toolchain.sh
scripts/base/deprecated/: bochs.sh  dependencies.sh  format.sh  qemu.sh  toolchain.sh
scripts/format/: ruff.toml
scripts/scons/: arch.py  bootloader.py  config.py  config_helper.py  disk.py  make_image.py  phony_targets.py  utility.py
tools/builder/: build.c  config.c  image.c
usr/: CMakeLists.txt  Makefile  SConscript
usr/libmath/: CMakeLists.txt  Makefile.mk  SConscript  linker.ld  math.c
usr/selftest/: SConscript  selftest.S  selftest.c
usr/sh/: CMakeLists.txt  Makefile.mk  SConscript  linker.ld  sh.c
